# image-optimizer

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
docs/plans/: 2026-02-24-image-optimizer-design.md  2026-02-24-image-optimizer-plan.md  2026-02-25-svg-enhancements.md
finder-actions/: create-toolbar-apps.sh  install.sh  optimize.sh  to-1200px.sh  to-2400px.sh  to-512px.sh  to-jpg.sh  to-webp.sh
finder-actions/toolbar-apps/Optimize.app/Contents/: Info.plist
finder-actions/toolbar-apps/To 1200px.app/Contents/: Info.plist
finder-actions/toolbar-apps/To 2400px.app/Contents/: Info.plist
sidecar/: package-lock.json  package.json
sidecar/src/: index.ts  ipc.ts  maxFileSize.ts  processor.ts  resize.ts  types.ts
sidecar/src/formats/: avif.ts  heic.ts  jpeg.ts  png.ts  svg.ts  webp.ts
sidecar/tests/: avif.test.ts  color-fidelity.test.ts  heic.test.ts  jpeg.test.ts  maxFileSize.test.ts  png.test.ts  processor.test.ts  resize.test.ts  svg.test.ts  webp.test.ts
sidecar/tests/fixtures/: create-fixtures.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: DimensionControls.tsx  DropZone.tsx  FilenameEditor.tsx  FormatSelector.tsx  ImagePreview.tsx  MaxFileSizeInput.tsx  OutputActions.tsx  QualitySlider.tsx  SettingsPanel.tsx  SvgModeSelector.tsx  ThumbnailStrip.tsx
src/hooks/: useDragDrop.ts  useImageProcessor.ts  useSettings.ts
src/lib/: ipc.ts
(+9 files in other folders)
