[package]
name = "image-optimizer"
version = "0.1.0"
description = "A Tauri App for image optimization"
authors = ["you"]
edition = "2021"

[lib]
name = "image_optimizer_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2.3.5"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-drag = "2.1.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-store = "2.4.2"
